# ninjatrader-zorro-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  QUICK_START_TESTING.md  README.md  automated-zorro-test.bat  automated-zorro-test.ps1  rebuild-and-test-2.70.bat  rebuild-debug.bat  test-checklist.bat  test-runner.bat  update-addon.bat
.github/: AUTOMATED_TESTING_QUICKREF.md  copilot-instructions.md
docs/: ALPACA_COMPARISON.md  API_COMPLIANCE_REVIEW.md  API_REFERENCE.md  ARCHITECTURE.md  AUTOMATED_TESTING.md  BITTREX_COMPARISON.md  CODE_REVIEW.md  CONFIG_FIX_SUMMARY.md  CPP_TESTING_PLAN.md  CPP_TESTING_SIMPLE.md  CRITICAL_DISCOVERY.md  DEBUG_ORDER_EXECUTION.md  GETTING_STARTED.md  INDEX.md  INSTALLATION.md  LIMIT_ORDER_GUIDE.md  LIMIT_ORDER_TESTING.md  LOGGING.md  PLAYBACK_TESTING.md  REBRANDING.md  SEND_TO_ZORRO_TEAM.md  STOP_ORDER_GUIDE.md  TESTING_ON_HOLIDAYS.md  TROUBLESHOOTING.md  UPGRADE_NOTES.md  ZORRO_2.70_DEBUG.md  ZORRO_2.70_FIX.md  ZORRO_CPP_SUMMARY.md  ZORRO_CPP_WORKFLOW.md  ZORRO_TEAM_ANALYSIS.md
examples/SimpleCppStrategy/: CMakeLists.txt  README.md  SimpleCppStrategy.cpp
include/: NT8Plugin.h  NtDirect.h  TcpBridge.h  trading.h  trading_zorro.h
ninjatrader-addon/: ZorroATI.cs  ZorroBridge.cs
private-scripts/: AutoTradeTest.c  CancelOrderTest.c  FillAndCloseTest.c  FiveBarTest.c  Fix-MarkdownUnicode.ps1  LimitOrderDebug.c  LimitOrderTest.c  PositionTest.c  PositionTest2.c  SimpleNT8Test.c  SimpleStopTest.c  StopOrderTest.c
scripts/: AutoTradeTest.c  BrokerAPITest.c  BrokerAPITest.c.bak  ComprehensiveNT8Test.c  Fix-MarkdownUnicode.ps1  LimitOrderTest.c  NT8Test.c  QuickAPITest.c  README.md  SimpleAutoTrade.c  SimpleOrderTest.c  StopOrderTest.c  TradeTest.c
src/: NT8Plugin.cpp  NT8Plugin.def  NtDirect.cpp  TcpBridge.cpp
zorro-tests/: CMakeLists.txt  LimitOrderTest.cpp  PositionTest.cpp  README.md
zorro-tests/common/: TestHelpers.cpp  TestHelpers.h
